+ scalatest gradle integration